# smartmet-library-macgyver

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  FEATURES.md  Makefile  README.md  SConstruct  common.mk  macgyver.dox  macgyver.spec  makefile-abicheck.inc  makefile.inc  smartmet-library-macgyver.spec
.circleci/: config.yml
docs/: thread-names.md
examples/: .gitignore  Makefile  monitor.cpp  trigger.cpp
include/: NearTree.h
macgyver/: Astronomy.h  AstronomyHelperFunctions.h  AstronomyJulianTime.cpp  AstronomyJulianTime.h  AstronomyLunarPhase.cpp  AstronomyLunarTime.cpp  AstronomySolarPosition.cpp  AstronomySolarTime.cpp  AsyncTask.cpp  AsyncTask.h  AsyncTaskGroup.cpp  AsyncTaskGroup.h  AtomicSharedPtr.h  Base64.cpp  Cache.cpp  Cache.h  CacheStats.h  CharsetConverter.cpp  CharsetConverter.h  CharsetTools.cpp  CharsetTools.h  CsvReader.cpp  CsvReader.h  DateTime.cpp  DateTime.h  DateTimeCommon.h  DateTimeParser.cpp  DateTimeParser.h  DebugTools.cpp  DebugTools.h  DirectoryMonitor.cpp  DirectoryMonitor.h  DistanceParser.cpp  DistanceParser.h  Exception.cpp  Exception.h  FastMath.h  FileSystem.cpp  FileSystem.h  FunctionMap.h  (+75 more)
source/: AstronomyLunarPhase.cpp  AstronomySolarPosition.cpp  Geometry.cpp  HelmertTransformation.cpp  Stat.cpp  String.cpp  TimeFormatter.cpp  TimeZones.cpp  TypeName.cpp
test/: .gitignore  AnsiEscapeCodesTest.cpp  AstronomyTest.cpp  AsyncTaskGroupTest.cpp  AsyncTaskTest.cpp  AtomicSharedPtrTest.cpp  Base64Test.cpp  CacheTest.cpp  CastTest.cpp  CharsetConverterTest.cpp  CharsetToolsTest.cpp  CsvReaderTest.cpp  DateTest.cpp  DateTimeParserTest.cpp  DateTimeTest.cpp  DebugToolsTest.cpp  DirectoryMonitorTest.cpp  DistanceParserTest.cpp  ExceptionTest.cpp  FastMathTest.cpp  FileSystemTest.cpp  FunctionMapTest.cpp  HashTest.cpp  HelmertTransformationTest.cpp  JoinTest.cpp  JucheTest.cpp  LRUCacheTest.cpp  Makefile  (+39 more)
(+33 files in other folders)
